# witb

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: create_database.py  parse.py  qwen_transformers.py  qwen_vllm.py  server.py  test.py
data/: bible.csv  bible.json
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/search/: route.ts
witb/: create_database.py  server.py
